src/objects/AMS_Fields_Translation__c.object
<CustomObject>
    <fields>
        <fullName>AMSAirport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport (AMS)</label>
        <referenceTo>AMS_Airport__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMSEmployee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Employee (AMS)</label>
        <referenceTo>AMS_Employee__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMSOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner (AMS)</label>
        <referenceTo>AMS_Owner__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMSPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person (AMS)</label>
        <referenceTo>AMS_Person__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address (AMS)</label>
        <referenceTo>AMS_Address__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Hierarchy</label>
        <referenceTo>AMS_Agencies_Hierarchy__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency (AMS)</label>
        <referenceTo>AMS_Agency__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_name__c</fullName>
        <label>Field name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATA ISO State</label>
        <referenceTo>IATA_ISO_State__c</referenceTo>
        <relationshipLabel>Fields Translations</relationshipLabel>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>CN</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_synchronization__c</fullName>
        <label>Last synchronization</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <label>Legacy System</label>
        <picklist>
            <picklistValues>
                <fullName>AIMS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIMS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIMS3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEBSTAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fields_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fields Translation</label>
    <nameField>
        <label>Fields Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>